(ocamllex Lexer)

(menhir
 (modules Parser))

(library
 (name Forester)
 (public_name forester.frontend)
 (preprocess
  (pps ppx_deriving.show))
 (libraries
  forester.prelude
  forester.core
  ocamlgraph
  xmlm
  domainslib
  str
  yuujinchou))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
