(ocamllex Lexer)

(menhir
 (modules Grammar)
 (flags --table))

(library
 (name Forester)
 (public_name forester.frontend)
 (preprocess
  (pps ppx_deriving.show))
 (libraries
  bwd
  forester.prelude
  forester.core
  forester.render
  menhirLib
  ocamlgraph
  eio_main
  str
  toml
  yuujinchou))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
